Added .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,11 @@ after_success:
   - docker build -t punss21/multi-server ./server
   - docker build -t punss21/multi-worker ./worker
 
-deploy:
-  provider:
-  region:
-  app:
-  ver: 
+  #Login to docker hub to push the images
+
+  - echo "DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - docker push punss21/multi-client
+  - docker push punss21/multi-nginx
+  - docker push punss21/multi-server
+  - docker push punss21/multi-worker
+
