--- a/.travis.yml
+++ b/.travis.yml
@@ -27,10 +27,10 @@ after_success:
 deploy:
   provider: "elasticbeanstalk"
   region: "ap-south-1"
-  app: "multidocker"
+  app: "multi-docker"
   env: "Multidocker-env-1"
   bucket_name: "elasticbeanstalk-ap-south-1-867669335535"
-  bucket_path: "multidocker"
+  bucket_path: "multi-docker"
   on:
     branch: master
 
